--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,119 @@
     margin: 0;
     box-sizing: border-box;
 }
+:root{
+    --white: #fafafb;
+    --purple: #e24fe7;
+    --blue-light: #1a97a0;
+    --blue-dark: #3126d1;
+    --green: #30e0c3;    
+}
+body{
+    background: linear-gradient(to bottom, var(--purple), var(--blue-light));
+    height: 100vh;
+    font-family: 'Tapestry', cursive;
+    color: var(--white)
+}
+.container{
+    max-width: 80%;
+    width: 400px;
+    height: 600px;
+    margin: 0 auto;
+}
+/***************
+*****Profile****
+****************/
+.profile{
+    margin: 0 1rem;
+}
+.profile h1{
+margin: 0.5rem 0;
+
+}
+.profile span{
+letter-spacing: 1px;
+}
+#date{
+    margin: 2rem 0;
+    font-size: 17px;
+}
+/***************
+**Add Homework**
+****************/
+.addHomework{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--white);
+    border-radius: 15px;
+    padding: 20px;
+    margin: 1rem;
+}
+.addHomework > p:first-of-type > input{
+  width: 270px;
+  height: 40px;
+  border-radius:  8px;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.addHomework > p:first-of-type > input::placeholder{
+    font-size: 1.1rem;
+    color: var(--purple);
+}
+.addHomework > p:first-of-type > i{
+  color: var(--purple);
+  font-size: 22px;
+}
+.addHomework > p:first-of-type > i:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+.addHomework :nth-child(2) > input{
+    margin-bottom: 1rem;
+    color: var(--purple);
+    border-radius: 8px;
+    width: 120px;
+    text-align: center;
+}
+.addHomework :nth-child(3) > select{
+    color: var(--purple);
+    border-radius: 8px;
+    width: 120px;
+    text-align: center;
+}
+.addHomework :nth-child(2) > input:hover,
+.addHomework :nth-child(3) > select:hover{
+    background: linear-gradient(to bottom, var(--purple), var(--blue-light));
+    color: var(--white);
+    cursor: pointer;
+}
+/***************
+****Homework****
+****************/
+.homework h3{
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.homework > ul > li{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(to bottom, var(--blue-dark), var(--green));
+  border-radius: 15px;
+  padding: 15px;
+  margin: 10px 0;
+}
+.homework > ul > li > p{
+    font-size: 20px;
+}
+.homework > ul > li > i{
+    font-size: 20px;
+}
+.homework > ul > li > i:hover{
+    color: var(--blue-light);
+    cursor: pointer;
+}
+.line-through{
+    text-decoration: line-through;
+    color: var(--blue-light);
+}
