--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,200;1,300;1,400;1,500&display=swap');
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-:root{
+:root {
     --white: #fafafb;
     --purple: #e24fe7;
     --blue-light: #1a97a0;
     --blue-dark: #7269f3;
-    --green: #30e0c3;    
+    --green: #30e0c3;
 }
-body{
+body {
     background: linear-gradient(to bottom, var(--purple), var(--blue-light));
     height: 100vh;
     font-family: 'Roboto Mono', monospace;
-    color: var(--white)
+    color: var(--white);
 }
-.container{
+.container {
     max-width: 80%;
     width: 400px;
     height: 600px;
@@ -26,24 +26,23 @@ body{
 /***************
 *****Profile****
 ****************/
-.profile{
+.profile {
     margin: 0 1rem;
 }
-.profile h1{
-margin: 0.5rem 0;
-
+.profile h1 {
+    margin: 0.5rem 0;
 }
-.profile span{
-letter-spacing: 1px;
+.profile span {
+    letter-spacing: 1px;
 }
-#dateHeader{
+#dateHeader {
     margin: 2rem 0;
     font-size: 17px;
 }
 /***************
 **Add Homework**
 ****************/
-.addHomework{
+.addHomework {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -52,74 +51,89 @@ letter-spacing: 1px;
     padding: 20px;
     margin: 1rem;
 }
-.addHomework > p:first-of-type > input{
-  width: 270px;
-  height: 40px;
-  border-radius:  8px;
-  margin-bottom: 1rem;
-  text-align: center;
+.addHomework > p:first-of-type > input {
+    width: 270px;
+    height: 40px;
+    border: solid 2px #000;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+    text-align: center;
 }
-.addHomework > p:first-of-type > input::placeholder{
+.addHomework > p:first-of-type > input::placeholder {
     font-size: 1.1rem;
     color: var(--purple);
 }
-.addHomework > p:first-of-type > i{
-  color: var(--purple);
-  font-size: 22px;
+
+.form-button-add {
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
-.addHomework > p:first-of-type > i:hover{
+
+.addHomework > p:first-of-type i {
+    color: var(--purple);
+    font-size: 22px;
+}
+.addHomework > p:first-of-type > i:hover {
     transform: scale(1.2);
     cursor: pointer;
 }
-.addHomework :nth-child(2) > input{
-    margin-bottom: 1rem;
+.addHomework :nth-child(2) > select {
     color: var(--purple);
     border-radius: 8px;
     width: 120px;
     text-align: center;
+    border: solid 2px #000;
 }
-.addHomework :nth-child(3) > select{
-    color: var(--purple);
-    border-radius: 8px;
-    width: 120px;
-    text-align: center;
-}
-.addHomework :nth-child(2) > input:hover,
-.addHomework :nth-child(3) > select:hover{
+.addHomework :nth-child(2) > select:hover {
     background: linear-gradient(to bottom, var(--purple), var(--blue-light));
-    color: var(--white);
+    color: var(--purple);
     cursor: pointer;
 }
 /***************
 ****Homework****
 ****************/
-.homework h3{
-  margin-bottom: 1rem;
-  text-align: center;
+.homework h3 {
+    margin-bottom: 1rem;
+    text-align: center;
 }
-.homework > ul > li{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: linear-gradient(to bottom, var(--blue-dark), var(--green));
-  border-radius: 15px;
-  padding: 15px;
-  margin: 10px 0;
+.homework > ul > li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, var(--blue-dark), var(--green));
+    border-radius: 15px;
+    padding: 15px;
+    margin: 10px 0;
 }
-.homework > ul > li > p{
+.homework > ul > li > p {
+    max-width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     font-size: 20px;
 }
-.homework > ul > li > i{
+.homework > ul > li > i {
     font-size: 20px;
 }
-.homework > ul > li > i:hover{
+
+.homework > ul > li > i:hover {
     color: var(--blue-light);
     cursor: pointer;
 }
-.line-through{
+.line-through {
     text-decoration: line-through;
     color: var(--blue-light);
 }
-.text{
+.text {
     font-size: 15px;
+}
+
+.todo-item.important {
+    border: 3px solid #f00;
+}
+
+.todo-item {
+    border: 3px solid #0f0;
 }
