--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     margin: 1rem;
 }
 .addHomework > p:first-of-type > input {
-    width: 220px;
+    width: 200px;
     height: 40px;
     border: solid 2px #000;
     border-radius: 8px;
@@ -136,4 +136,9 @@ body {
 
 .todo-item {
     border: 3px solid #0f0;
+}
+@media (min-width: 700px) {
+    .addHomework > p:first-of-type > input {
+        width: 270px;
+    }
 }
