--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     margin: 1rem;
 }
 .addHomework > p:first-of-type > input {
-    width: 200px;
+    width: 176px;
     height: 40px;
     border: solid 2px #000;
     border-radius: 8px;
@@ -94,6 +94,7 @@ body {
 /***************
 ****Homework****
 ****************/
+
 .homework h3 {
     margin-bottom: 1rem;
     text-align: center;
@@ -112,7 +113,11 @@ body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    font-size: 20px;
+    font-size: 15px;
+    margin: 0px 7px ;
+}
+.todo-date{
+    margin: 0 5px;
 }
 .homework > ul > li > i {
     font-size: 20px;
@@ -140,5 +145,8 @@ body {
 @media (min-width: 700px) {
     .addHomework > p:first-of-type > input {
         width: 270px;
+    }
+    .homework > ul > li > p{
+        font-size: 20px;
     }
 }
