--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,15 @@
 }
 body {
     background: linear-gradient(to bottom, var(--purple), var(--blue-light));
-    height: 100vh;
     font-family: 'Roboto Mono', monospace;
     color: var(--white);
+    height: 100vw;
 }
 .container {
     max-width: 80%;
     width: 400px;
     height: 600px;
+    max-height: 95%;
     margin: 0 auto;
 }
 /***************
